<resources>
    <string name="TODO">_TODO_</string>

    <string name="app_name">EasyOrienteering</string>

    <!-- ¿Esto qué eees? -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Comunes -->
    <string name="error">Error</string>
    <string name="error_inesperado">Error inesperado</string>
    <string name="cargando_datos">Cargando datos…</string>
    <string name="cuenta_borrada">Cuenta borrada</string>


    <!-- Permisos -->
    <string name="permiso_requerido">Se requiere este permiso para el funcionamiento de la aplicación</string>
    <string name="permiso_necesario">Permiso necesario</string>
    <string name="permiso_camara">Se necesita acceso a la cámara</string>

    <!-- Resumen -->
    <string name="resumenTitulo">Resumen</string>
    <string name="resumenOmitir">OMITIR</string>
    <string name="resumen_que_es_titulo">¿Qué es EasyOrienteering?</string>
    <string name="resumen_que_es_contenido">Con esta aplicación puedes participar en las carreras que otros orientadores hayan preparado.\n\nLas carreras pueden ser eventos o circuitos.\n\nUn evento es una carrera que se organiza en un día concreto, mientras que un circuito suele estar disponible siempre.</string>
    <string name="resumen_como_funciona_titulo">¿Cómo funciona?</string>
    <string name="resumen_como_funciona_contenido">Tras escanear un código QR de salida, empezarás a participar en un recorrido.\n\nSi el recorrido es trazado, debes pasar por los puntos de control en el orden establecido.\n\nSi el recorrido es score, tú eliges el orden.</string>
    <string name="resumen_resultados_titulo">Resultados</string>
    <string name="resumen_resultados_contenido">También podrás ver los resultados de las carreras y competir con otros orientadores.</string>
    <string name="resumen_final_titulo">¿Empezamos?</string>
    <string name="resumen_final_contenido">Recuerda siempre pensar antes de correr ;)</string>
    <string name="resumen_siguiente">Siguiente</string>


    <!-- Comunes (conexión) -->
    <string name="conexion_cuenta_google">Usar cuenta de Google</string>
    <string name="conexion_nombre">Nombre de usuario</string>
    <string name="conexion_nombre_invalido">Nombre de usuario no válido</string>
    <string name="conexion_password_largo">La contraseña debe ser de al menos 8 caracteres de largo</string>
    <string name="conexion_password">Contraseña</string>

    <!-- Pantalla conexión -->
    <string name="conexion_continuar">Para continuar tienes que usar una cuenta\n\nEs gratis y rápido</string>
    <string name="conexion_registrar">Registrar nueva cuenta</string>
    <string name="conexion_conectar">¿Ya tienes una cuenta?</string>

    <!-- Pantalla de login -->
    <string name="login_titulo">Conectar cuenta</string>
    <string name="login_olvidaste_password">¿Olvidaste tu contraseña?</string>
    <string name="login_conectar">CONECTAR</string>
    <string name="login_incorrecto">Email/nombre o contraseña incorrectos</string>
    <string name="login_error">Ocurrió un error al conectar. Comprueba tu conexión e inténtalo de nuevo</string>
    <string name="login_limite">Has intentado conectarte sin éxito 5 veces. Espera un minuto para volver a intentarlo</string>

    <!-- Pantalla de registro -->
    <string name="registro_titulo">Registrar cuenta</string>
    <string name="registro_email">Email</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_club">Club</string>
    <string name="registro_nombre_publico">(este será tu nombre público)</string>
    <string name="registro_password_conf">Contraseña (confirmación)</string>
    <string name="registro_acepto">Acepto las condiciones de uso y la política de tratamiento de estos datos</string>
    <string name="registro_email_existente">Ya existe una cuenta con este email</string>
    <string name="registro_email_no_valido">El email no es válido</string>
    <string name="registro_nombre_invalido">Solo números, letras y \'_\'</string>
    <string name="registro_nombre_existente">Ese nombre ya está usado por otro usuario</string>
    <string name="registro_pass_largo">Al menos 8 letras</string>
    <string name="registro_pass_no_coinciden">Las contraseñas no coinciden</string>
    <string name="registro_registrar">REGISTRAR CUENTA</string>
    <string name="registro_registrando">Registrando…</string>
    <string name="registro_registrada">Cuenta registrada</string>
    <string name="registro_error">Error al registrarte</string>
    <string name="registro_error2">Comprueba tu conexión</string>

    <!-- Pantalla de política y condiciones -->
    <string name="politicas_politica">POLÍTICA DE DATOS</string>
    <string name="politicas_politica_corto">POLÍTICA</string>
    <string name="politicas_condiciones">CONDICIONES DE USO</string>
    <string name="politicas_condiciones_corto">CONDICIONES</string>
    <!-- Contenidos de las políticas -->

    <!-- Pantalla de olvido de contraseña -->
    <string name="olvido_titulo">¿Olvidaste tu contraseña?</string>
    <string name="olvido_descripcion">No te preocupes, introduce el email o nombre con el que te registraste y recibirás un correo con el que podrás crear una nueva contraseña</string>
    <string name="olvido_enviar">ENVIAR</string>
    <string name="olvido_listo">Listo. Recibirás un correo si existe el usuario con el email o nombre introducido</string>
    <string name="olvido_error">Ocurrió un error. Comprueba tu conexión e inténtalo de nuevo</string>

    <!-- Pantalla principal -->
    <string name="home_mi_perfil">Mi perfil</string>
    <string name="home_mis_carreras">Mis carreras</string>
    <string name="home_explorar">Explorar</string>
    <string name="home_unirme">Unirme a carrera</string>

    <!-- Pantalla de escaneo -->
    <string name="scan_error_es_control">Has escaneado un control, debes escanear un triángulo de salida</string>
    <string name="scan_error_es_meta">Has escaneado una meta, debes escanear un triángulo de salida</string>
    <string name="scan_error_es_desconocido">Este QR no pertenece a esta aplicación</string>
    <string name="scan_error_ya_corrido">Ya has corrido este recorrido</string>
    <string name="scan_error_ya_registrado">Ya has registrado este control</string>
    <string name="scan_error_corriendo">Ya estás corriendo un recorrido</string>
    <string name="scan_error_inesperado">Ha ocurrido un error inesperado. Vuélvelo a intentar de nuevo</string>
    <string name="scan_conf_titulo">Inicio de recorrido</string>
    <string name="scan_conf_mensaje">En cuanto aceptes comenzará a contar el tiempo y se te mostrará el mapa</string>
    <string name="scan_pendiente_titulo">Tienes un recorrido pendiente</string>
    <string name="scan_pendiente_mensaje">Aún no has acabado el recorrido <b>%1$s</b> de la carrera <b>%2$s</b>. ¿Deseas reanudar o abandonar?</string>
    <string name="scan_pendiente_reanudar">Reanudar</string>
    <string name="scan_pendiente_abandonar">Abandonar</string>
    <string name="scan_abandono_titulo">¿Abandonar recorrido?</string>
    <string name="scan_abandono_seguir">Seguir</string>
    <string name="scan_escanea_triangulo">Escanea un triángulo de salida</string>
    <string name="scan_btn_vista_scan">SCAN</string>
    <string name="scan_btn_vista_mapa">MAPA</string>
    <string name="scan_cargando_mapa">Cargando mapa…</string>
    <string name="scan_no_hay_mapa">No hay mapa</string>
    <!-- Diálogo de carga -->
    <string name="scan_carga_pendiente">Comprobando carrera pendiente…</string>
    <string name="scan_carga_inicio">Iniciando recorrido…</string>
    <string name="scan_carga_abandono">Abandonando recorrido…</string>
    <string name="scan_carga_abandonado">Recorrido abandonado</string>
    <string name="scan_carga_registrando">Registrando control…</string>
    <string name="scan_recorrido_acabado">Recorrido finalizado</string>


    <!-- Mis carreras -->
    <string name="mis_carreras_participadas">Participadas</string>
    <string name="mis_carreras_organizadas">Organizadas</string>


    <!-- Detalles de carrera -->
    <string name="detalles_carrera">Detalles de carrera</string>
    <string name="detalles_carrera_error_id">ID de carrera inválido</string>
    <string name="detalles_carrera_cargando">Cargando carrera…</string>
    <string name="detalles_fecha">Fecha del evento</string>
    <string name="detalles_organizador">Organizador</string>
    <string name="detalles_resultados">Resultados</string>


    <!-- Configuración -->
    <string name="conf_configuracion">Configuración</string>
    <string name="conf_cambiar_nombre">Cambiar nombre</string>
    <string name="conf_cambiar_club">Cambiar club</string>
    <string name="conf_cambiar_contrasena">Cambiar contraseña</string>
    <string name="conf_que_es_easyorienteering">¿Qué es EasyOrienteering?</string>
    <string name="conf_compartir_aplicacion">Compartir aplicación</string>
    <string name="conf_borrar_cuenta">Borrar cuenta</string>
    <string name="conf_borrar">Borrar</string>
    <string name="conf_borrar_cuenta_mensaje">¿Estás seguro de que quieres borrar la cuenta? No la podrás recuperar y desaparecerás de los resultados de los recorridos en los que hayas participado.\n\nLas carreras que hayas creado no se borrarán. Si deseas borrarlas debes hacerlo de forma individual.</string>
    <string name="conf_borrando_cuenta">Borrando cuenta…</string>
    <string name="conf_resp_cuenta_borrada">Cuenta borrada</string>
    <string name="conf_cerrar_sesion">Cerrar sesión</string>
    <string name="conf_cerrar_sesion_mensaje">¿Estás seguro de que quieres cerrar tu sesión en este dispositivo?</string>
    <string name="conf_nuevo_nombre">Nuevo nombre</string>
    <string name="conf_nuevo_club">Nuevo club</string>
    <string name="conf_cambiando_nombre">Cambiando nombre…</string>
    <string name="conf_resp_nombre_cambiado">Nombre cambiado con éxito</string>
    <string name="conf_cambiando_club">Cambiando club…</string>
    <string name="conf_resp_club_cambiado">Club cambiado con éxito</string>
    <string name="conf_cambiando_password">Cambiando contraseña…</string>
    <string name="conf_resp_password_cambiada">Contraseña cambiada con éxito</string>
    <string name="conf_cambiar_pass">Cambiar contraseña</string>
    <string name="conf_pass_actual">Contraseña actual</string>
    <string name="conf_pass_nueva">Contraseña nueva</string>
    <string name="conf_pass_conf">Contraseña nueva (confirmación)</string>
    <string name="conf_cerrando_sesion">Cerrando sesión…</string>


    <!-- Perfil de usuario -->
    <string name="perfil_miembro_desde">Miembro desde el %1$s</string>

    <!-- Resultados -->
    <string name="resultados_resultados">Resultados %1$s</string>
    <string name="resultados_cargando">Cargando resultados…</string>
    <string name="resultados_posicion">#</string>
    <string name="resultados_nombre_club">Nombre / Club</string>
    <string name="resultados_puntuacion">Puntuación</string>
    <string name="resultados_tiempo_total">Tiempo</string>
    <string name="resultados_diferencia">Diferencia</string>
    <string name="resultados_abandonado">Abandona</string>
    <string name="resultados_pendiente">Pendiente</string>
    <string name="resultados_sin_resultados">No hay resultados</string>


    <!-- Explorar -->
    <string-array name="entries_tipo">
        <item>Cualquiera</item>
        <item>Evento</item>
        <item>Circuito</item>
    </string-array>
    <string-array name="entries_modalidad">
        <item>Cualquiera</item>
        <item>Trazado</item>
        <item>Score</item>
    </string-array>


</resources>
