<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.registro.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/registrarseBtnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background=""
            android:src="@drawable/atras"
            tools:layout_editor_absoluteX="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="50dp"
            android:paddingTop="50dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/registro_titulo"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/registro_email"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/registrarseEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="50dp" />

            <LinearLayout
                android:id="@+id/llNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/registrarseEmail"
                tools:layout_editor_absoluteX="49dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_nombre"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/registro_nombre_publico"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/registrarseNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/llNombre"
                tools:layout_editor_absoluteX="50dp" />

            <TextView
                android:id="@+id/registrarseErrorNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/error"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/registrarseNombre"
                tools:layout_editor_absoluteX="50dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/conexion_password"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarseErrorNombre" />

            <EditText
                android:id="@+id/registrarsePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <ImageView
                android:id="@+id/registrarseIndicadorPass"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:src=""
                app:layout_constraintBottom_toBottomOf="@id/registrarsePassword"
                app:layout_constraintStart_toEndOf="@id/registrarsePassword"
                app:layout_constraintTop_toTopOf="@id/registrarsePassword" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/registro_password_conf"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarsePassword" />

            <EditText
                android:id="@+id/registrarsePasswordConf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.717"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <ImageView
                android:id="@+id/registrarseIndicadorConf"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:src=""
                app:layout_constraintBottom_toBottomOf="@id/registrarsePasswordConf"
                app:layout_constraintStart_toEndOf="@id/registrarsePasswordConf"
                app:layout_constraintTop_toTopOf="@id/registrarsePasswordConf" />


            <TextView
                android:id="@+id/registrarseErrorPasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/error"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/registrarsePasswordConf"
                tools:layout_editor_absoluteX="50dp" />

            <CheckBox
                android:id="@+id/registrarseAcepto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/registro_acepto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarseErrorPasses" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/help"
                app:layout_constraintBottom_toBottomOf="@+id/registrarseAcepto"
                app:layout_constraintStart_toEndOf="@+id/registrarseAcepto"
                app:layout_constraintTop_toTopOf="@+id/registrarseAcepto" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:layout_marginTop="32dp"
                android:enabled="false"
                android:text="@string/registro_registrar"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarseAcepto" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>