<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_cambiar_pass"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conf_pass_actual"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/conf_input_cambio_pass_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/conf_pass_actual"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="50dp" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conf_pass_nueva"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conf_input_cambio_pass_actual" />

    <EditText
        android:id="@+id/conf_input_cambio_pass_nueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/conf_pass_nueva"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="50dp" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conf_pass_conf"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conf_input_cambio_pass_nueva" />

    <EditText
        android:id="@+id/conf_input_cambio_pass_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/conf_pass_conf"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="50dp" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/conf_input_cambio_pass_conf"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/conf_btn_cancelar_cambio_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/conf_btn_guardar_cambio_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>